--- a/PMS-PropertyHapa.Admin/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Shared/_Layout.cshtml
@@ -252,6 +252,12 @@
                                     </a>
                                    
                                 </li>
+                                <li class="sidebar-list">
+                                    <a href="@Url.Action("Index","SubscriptionRequest")" class="sidebar-link sidebar-title link-nav no-arrow" href="#">
+                                        <svg b-ab5quygad7="" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file"><path b-ab5quygad7="" d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline b-ab5quygad7="" points="13 2 13 9 20 9"></polyline></svg><span>Subscription Requests</span>
+                                    </a>
+                                   
+                                </li>
 
                                 <li class="sidebar-list">
                                     <a href="@Url.Action("Index","Setting")" class="sidebar-link sidebar-title link-nav no-arrow" href="#">
