--- a/PMS-PropertyHapa/Views/Auth/Register.cshtml
+++ b/PMS-PropertyHapa/Views/Auth/Register.cshtml
@@ -149,25 +149,6 @@
             </div>
         </fieldset>
         <fieldset>
-@*             <div class="row">
-                <div class="form-group col-md-8 d-flex align-items-center">
-                    <label for="numberOfUnits" class="mr-2">Number of Units</label>
-                    <input class="form-control" type="number" id="unitsFinal" name="unitsFinal" placeholder="Number of Units">
-                </div>
-                <div class="form-group col-md-4 text-center">
-                    <div class="switch-container">
-                        <span class="switch-label">Monthly</span>
-                        <label class="switch">
-                            <input type="checkbox" id="planSelection">
-                            <span class="switch-state"></span>
-                        </label>
-                        <span class="switch-label">Yearly</span>
-                    </div>
-                </div>
-            </div>
- *@
-
-
             <div class="media">
                 <label class="col-form-label">Number of Units</label>
                 <input class="form-control" id="unitsFinal" value="1" type="number" name="unitsFinal" placeholder="Number of Units">
@@ -302,16 +283,6 @@
             handleUnitsChange();
         });
 
-        // $(".btn-next").click(function (event) {
-        //     event.preventDefault();
-
-        //     var email = $("#emailAddress").val();
-        //     if (!isValidEmail(email)) {
-        //         toastr.error("Please enter a valid email address.");
-        //         return false;
-        //     }
-        // });
-
     });
 
 
@@ -393,7 +364,12 @@
                                                 <span> Tax</span></h6>
                                         </li>
                                     </ul>
-                                            <button class="btn btn-primary btn-lg" onclick="handleSubscriptionClick(${subscription.Price}, '${subscription.Id}', '${subscription.SubscriptionName}', '${subscription.NoOfUnits}')" type="button">Subscribe</button>
+                                    <button
+                                        class="btn btn-primary btn-lg"
+                                        onclick="handleSubscriptionClick(${subscription.Price}, '${subscription.Id}', '${subscription.SubscriptionName}', '${subscription.NoOfUnits}')"
+                                        type="button">
+                                        ${subscription.SubscriptionName === 'Free' ? 'Trial' : 'Subscribe'}
+                                    </button>
                                 </div>
                             </div>
         </div>`;
@@ -495,6 +471,8 @@
             SubscriptionName: $("#subscriptionName").val(),
             SubscriptionId: $("#subscriptionId").val(),
             Price: $("#subscriptionPrice").val(),
+            IsYearly: $("#planSelection").is(":checked"),
+            IsTrial: $("#subscriptionName").val() == "Free" ? true : false
         };
 
         if (isNotFree) {
