--- a/PMS-PropertyHapa/Views/Auth/Cancel.cshtml
+++ b/PMS-PropertyHapa/Views/Auth/Cancel.cshtml
@@ -41,22 +41,25 @@
     }
 
         .btn-custom:hover {
-            background-color: #57a1be;
+            color: #57a1be;
         }
 
     .lead, .display-4 {
         margin-bottom: 1rem;
     }
 </style>
-<div class="container cancel-page">
-    <div class="card cancel-card">
-        <div class="mb-4">
-            <i class="bi bi-x-circle cancel-icon"></i>
+<div class="page-body">
+    <div class="container cancel-page">
+        <div class="card cancel-card">
+            <div class="mb-4">
+                <i class="bi bi-x-circle cancel-icon"></i>
+            </div>
+            <h1 class="display-4">Subscription Cancelled</h1>
+            <p class="lead">We are sorry to see you go. Your subscription has been cancelled successfully.</p>
+            <hr class="my-4">
+            <p>If you have any questions or need further assistance, please contact our support team.</p>
+            <a class="btn btn-custom btn-lg" href="/" role="button">Home Page</a>
         </div>
-        <h1 class="display-4">Subscription Cancelled</h1>
-        <p class="lead">We are sorry to see you go. Your subscription has been cancelled successfully.</p>
-        <hr class="my-4">
-        <p>If you have any questions or need further assistance, please contact our support team.</p>
-        <a class="btn btn-custom btn-lg" href="/" role="button">Home Page</a>
     </div>
 </div>
+
